[gd_scene load_steps=11 format=3 uid="uid://7kbcjfyx6tsa"]

[ext_resource type="Script" uid="uid://vg6th24gwgm" path="res://Script/Player.gd" id="1_kpjcp"]
[ext_resource type="Texture2D" uid="uid://cf0ql7e2fq6gg" path="res://Assets/Planes/Plane.png" id="2_3eeal"]
[ext_resource type="Texture2D" uid="uid://djvaj760c4r61" path="res://Assets/Textures/MuzzleFlash.png" id="3_jvxg0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kpjcp"]
size = Vector2(52, 74)

[sub_resource type="Animation" id="Animation_mud5u"]
resource_name = "MuzzleFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flash1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flash1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.349066]
}

[sub_resource type="Animation" id="Animation_fvocf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flash1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flash1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pmp2f"]
_data = {
&"MuzzleFlash1": SubResource("Animation_mud5u"),
&"RESET": SubResource("Animation_fvocf")
}

[sub_resource type="Animation" id="Animation_3pik8"]
resource_name = "MuzzleFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flash2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flash2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.349066]
}

[sub_resource type="Animation" id="Animation_adgam"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flash2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flash2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g1hv4"]
_data = {
&"MuzzleFlash2": SubResource("Animation_3pik8"),
&"RESET": SubResource("Animation_adgam")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_kpjcp")

[node name="Player" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(3.5, 3.5)
texture = ExtResource("2_3eeal")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-2, 0)
shape = SubResource("RectangleShape2D_kpjcp")

[node name="GunPos1" type="Marker2D" parent="."]
position = Vector2(18, -25)

[node name="GunPos2" type="Marker2D" parent="."]
position = Vector2(18, 25)

[node name="ShootSpeed" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Flash1" type="Sprite2D" parent="."]
position = Vector2(22, -25)
texture = ExtResource("3_jvxg0")

[node name="MuzzleFlash1" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pmp2f")
}

[node name="Flash2" type="Sprite2D" parent="."]
position = Vector2(22, 25)
texture = ExtResource("3_jvxg0")

[node name="MuzzleFlash2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_g1hv4")
}

[connection signal="timeout" from="ShootSpeed" to="." method="_on_shoot_speed_timeout"]
